// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Border Position should render with non standard border 1`] = `
<View
  borderPosition="left"
  color="primary"
  size="small"
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#f6be00",
        "borderBottomLeftRadius": 8,
        "borderBottomRightRadius": 0,
        "borderTopLeftRadius": 8,
        "borderTopRightRadius": 0,
        "paddingHorizontal": 8,
      },
    ]
  }
  testID="ds-tag"
>
  <Text
    color="primary"
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "Roboto",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0.38,
          "lineHeight": 15,
        },
      ]
    }
    testID="ds-tag-label"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Tag Colors should render with secondary color 1`] = `
<View
  borderPosition="default"
  color="secondary"
  size="small"
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#9f81fd",
        "borderRadius": 8,
        "paddingHorizontal": 8,
      },
    ]
  }
  testID="ds-tag"
>
  <Text
    color="secondary"
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "Roboto",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0.38,
          "lineHeight": 15,
        },
      ]
    }
    testID="ds-tag-label"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Tag Component should render with default variant 1`] = `
<View
  borderPosition="default"
  color="primary"
  size="small"
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#f6be00",
        "borderRadius": 8,
        "paddingHorizontal": 8,
      },
    ]
  }
  testID="tag"
>
  <Text
    color="primary"
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "Roboto",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0.38,
          "lineHeight": 15,
        },
      ]
    }
    testID="tag-label"
  >
    Lorem Ipsum
  </Text>
</View>
`;

exports[`Tag Sizes should render with non default size 1`] = `
<View
  borderPosition="default"
  color="primary"
  size="standard"
  style={
    Array [
      Object {
        "alignSelf": "flex-start",
        "backgroundColor": "#f6be00",
        "borderRadius": 12,
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      },
    ]
  }
  testID="ds-tag"
>
  <Text
    color="primary"
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "Roboto",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0.38,
          "lineHeight": 15,
        },
      ]
    }
    testID="ds-tag-label"
  >
    Lorem Ipsum
  </Text>
</View>
`;
